# agh-racing-drone-masters

./: .gitignore  .gitmodules  README.md  __init__.py  eval.py  eval_net.py  getAABB.py  main.py  pyproject.toml  test_training.py  train.py
assets/: gate.urdf
envs/: RaceEnv.py  __init__.py  enums.py
results/: save-flight-06.11.2023_18.33.40.npy  save-flight-06.11.2023_18.43.52.npy  save-flight-06.11.2023_18.48.07.npy  save-flight-06.11.2023_18.48.35.npy  save-flight-06.11.2023_18.48.51.npy  save-flight-06.11.2023_18.49.08.npy  save-flight-06.11.2023_18.50.12.npy  save-flight-06.11.2023_18.50.33.npy  save-flight-06.11.2023_18.52.26.npy  save-flight-06.11.2023_18.52.42.npy  save-flight-06.11.2023_18.53.35.npy  save-flight-06.11.2023_18.56.48.npy  save-flight-06.11.2023_18.57.08.npy  save-flight-06.11.2023_18.58.55.npy  save-flight-06.11.2023_18.59.12.npy  save-flight-06.11.2023_19.04.16.npy  save-flight-06.11.2023_19.04.30.npy  save-flight-06.11.2023_19.04.39.npy  save-flight-06.11.2023_19.08.08.npy  save-flight-06.11.2023_19.10.00.npy  save-flight-06.11.2023_19.10.27.npy  save-flight-06.11.2023_19.11.09.npy
results/save-flight-pid-06.11.2023_18.32.36/: pr0.csv  pwm1-0.csv  pwm2-1.csv  pwm3-0.csv  rpm2-2.csv  rpm3-1.csv  rr1.csv  vx1.csv  vy1.csv  vz0.csv  wy1.csv  wz0.csv  y0.csv
results/save-flight-pid-06.11.2023_18.33.40/: pwm0-0.csv  pwm0-1.csv  pwm2-0.csv  pwm3-2.csv  r0.csv  rpm0-0.csv  rpm1-0.csv  wy0.csv  x0.csv  y1.csv  ya0.csv  ya2.csv
src/: build_network.py  track_loader.py  utils.py
tracks/: sample_track.csv  single_gate.csv
(+741 files in other folders)
